# Plactice

./: .#fivestone.c++  .gitignore  README.md  fivestone.c++  fivestone.cpp
Sanmoku_AI/: CMakeLists.txt  Q_table.txt
Sanmoku_AI/include/: ai.hpp  game_master.hpp  person.hpp  player.hpp  random.hpp
Sanmoku_AI/src/: ai.cpp  game_master.cpp  main.cpp  person.cpp  player.cpp  random.cpp
battlegame/: CMakeLists.txt
battlegame/include/: action.hpp  emperor.hpp  game_master.hpp  person.hpp  rabbit.hpp
battlegame/src/: action.cpp  game_master.cpp  main.cpp  person.cpp
five_stone/: .gitignore  Makefile
five_stone/src/: five_stones.c  main.c
fivestone_c/: README.md
fivestone_c/include/: five_stones.h
fivestone_cpp/: CMakeLists.txt  README.md
fivestone_cpp/include/: fivestone.hpp
fivestone_cpp/src/: fivestone.cpp  main.cpp
mancala/: CMakeLists.txt  README.md
mancala/include/: dealer.hpp  display.hpp  stone.hpp
mancala/src/: dealer.cpp  display.cpp  main.cpp  stone.cpp
opensiv3d/: CMakeLists.txt  Main.cpp  breakout.cpp
rust/: .gitignore
rust/1/: main.rs
rust/2/: Cargo.toml
rust/2/src/: main.rs
test/: test.txt
tetris/: CMakeLists.txt  README.md
tetris-ncurses/include/: display.hpp
tetris-ncurses/src/: display.cpp  main.cpp
tetris-opensiv3d/: .gitignore  CMakeLists.txt  README.md
tetris-opensiv3d/include/: display.hpp  field.hpp  mino.hpp
tetris-opensiv3d/src/: display.cpp  main.cpp
tetris/include/: display.hpp  field.hpp  mino.hpp
tetris/src/: display.cpp  field.cpp  main.cpp  mino.cpp
